# nm_workshop

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  glad.c  nuklear_glfw3.h  opengl.cpp  si_normalmap.h  stb_image_write.h  stb_truetype.h
shaders/: composite.frag  gaussian_blur.frag  greyscale_average.frag  greyscale_lightness.frag  greyscale_luminance.frag  normal_map.frag  normalize.frag  shader.frag  shader.vert
